fixtures/cs-hash-03/good/pbkdf2-indirect-config.ts
import { pbkdf2Sync } from "crypto";

const config = { iterations: 1000 };

export function hashPassword(password: string, salt: string) {
	return pbkdf2Sync(password, salt, config.iterations, 32, "sha256");
}
